2013-05-29  Dario Rodriguez <dario@artica.es>

	* util/plugin/wmi_remote.pl,
	util/plugin/snmp_remote.pl: New plugins to monitor servers
	remotely using wmi and snmp.

2013-05-23  Sancho Lerena <slerena@artica.es>
	
	* util/pandora_logrotate: Fixed several problems due rotation.
	Now there is no need to restart any process, much safer.
	Added correct paths for pandora console log on centos and debian.

2013-05-22  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/make_deb_package.sh: Removed a touch that left a newly
	  installed server with an empty configuration file.

2013-05-22  Sancho Lerena <slerena@artica.es>

	* DEBIAN/postinst: Modifications for manage the upgrade on
	existing .conf files.
	
	* DEBIAN/conffiles: Removed.

	* conf/pandora_server.conf.new: Renamed to avoid problems on target
	installation.

        * pandora_server_installer,
	pandora_server.spec,
	pandora_server.redhat.spec: Modifications for manage the upgrade on    
        existing .conf files.

2013-05-20  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_xml_stress.pl: Merged from trunk. Added support for
	  strictly incremental modules.

2013-05-20  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_xml_stress.conf,
	  util/pandora_xml_stress.pl: Merged from trunk. Added support for
	  data attenuation on certain days.

2013-05-16  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server_installer,
	  lib/PandoraFMS/NetworkServer.pm,
	  Makefile.PL: Removed PERL's SNMP lib from the deps.

2013-05-16  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control,
	pandora_server.spec,
	pandora_server.redhat.spec: Added Perl JSON dependency, removed net-snmp.
	Upgraded version in some specs.

2013-05-13  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Directly call snmptranslate, since
	  SNMP::translateObj does not seem to load enterprise MIBs.

2013-04-24  Sancho Lerena <slerena@artica.es>

	* util/pandora_db.pl: patched the code of tagente_datos purge to have n chunks, 